--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".MessageOverviewActivity"
             android:label="@string/title_activity_message_overview" >
         </activity>
+        <activity
+            android:name=".MessageDetailActivity"
+            android:label="@string/title_activity_message_detail" >
+        </activity>
     </application>
 
 </manifest>
